--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html><head>
 	
-	<title>TestSketch</title>
+	<title>Sketch Preview</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
 	<link rel="stylesheet" href="styles/app.css">
 
